[gd_scene load_steps=5 format=3 uid="uid://ccxncict6cq11"]

[ext_resource type="Texture2D" uid="uid://b4xj01hkkhswb" path="res://Art Assets/Assets/HQ.png" id="1_ldiky"]
[ext_resource type="Script" path="res://Entities/HQ.gd" id="1_se6c5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5fsce"]
size = Vector2(1774, 1771)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8bxo"]
size = Vector2(1998, 1998)

[node name="Sprite2D" type="Sprite2D"]
top_level = true
texture = ExtResource("1_ldiky")
script = ExtResource("1_se6c5")

[node name="InnerArea2D" type="Area2D" parent="."]

[node name="AnimatableBody2D" type="CollisionShape2D" parent="InnerArea2D"]
shape = SubResource("RectangleShape2D_5fsce")

[node name="OuterArea2D" type="Area2D" parent="."]

[node name="AnimatableBody2D" type="CollisionShape2D" parent="OuterArea2D"]
shape = SubResource("RectangleShape2D_e8bxo")
debug_color = Color(0.788235, 0.431373, 0, 0.419608)

[connection signal="area_entered" from="InnerArea2D" to="." method="_on_inner_area_2d_area_entered"]
[connection signal="area_exited" from="InnerArea2D" to="." method="_on_inner_area_2d_area_exited"]
[connection signal="area_entered" from="OuterArea2D" to="." method="_on_outer_area_2d_area_entered"]
[connection signal="area_exited" from="OuterArea2D" to="." method="_on_outer_area_2d_area_exited"]
